<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="nav_drawer_items">
        <item>Out</item>
        <item>Graph</item>
        <item>Cudos</item>
    </string-array>
    <!--
    <div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
    -->
    <!--<array name="nav_drawer_icons">
        <item>@mipmap/ic_wallet</item>
        <item>@mipmap/ic_wallet</item>
        <item>@mipmap/ic_wallet</item>
    </array> -->

    <string name="app_name">DontSpendMe</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="SpendHint">Spending..</string>
    <string name="Btn_SaveExpend">REGISTER</string>
    <string name="btn_AddExpend">+</string>
    <string name="ckb_addExpend">More</string>
    <string name="Edtxt_MoreSpendsHint">Enter # of spends</string>

</resources>
