<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:weightSum="1">

    <EditText
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_outcomes"
        android:hint="@string/SpendHint"
        android:layout_alignTop="@+id/listView_categories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_AddExpend"
        android:id="@+id/button_one_expend"
        android:layout_below="@+id/checkBox_more_expends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <ListView
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:id="@+id/listView_categories"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/editText_outcomes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_SaveExpend"
        android:id="@+id/button_save_expends"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_addExpend"
        android:id="@+id/checkBox_more_expends"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/Edtxt_MoreSpendsHint"
        android:layout_below="@+id/checkBox_more_expends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/listView_categories"
        android:layout_toStartOf="@+id/listView_categories" />

</RelativeLayout>
